# simplify-polyline

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile.toml  README.md
.github/workflows/: build-caches.yml  clippy.yml  commitlint.yml  release-please.yml  release.yml  test.yml
benches/: bench.rs
fixtures/: bench-1118.json  bench-73752.json  test-case-output.json  test-case.json
src/: lib.rs  main.rs  point.rs  serde.rs  traits.rs
tests/: integration.rs
