[package]
name = "simplify-polyline"
version = "0.2.0"
description = "Simplify polylines using Douglas-Peucker and radial distance algorithms. Port of the simplify-js library."
homepage = "https://github.com/kade-robertson/simplify-polyline"
repository = "https://github.com/kade-robertson/simplify-polyline"
license = "MIT"
edition = "2021"
keywords = ["simplify", "polyline", "geometry", "simplify-js"]
categories = ["mathematics", "graphics"]

[dependencies]
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
tests = ["dep:serde", "dep:serde_json"]