[package]
name = "simplify-polyline"
version = "0.5.0"
description = "Simplify polylines using Douglas-Peucker and radial distance algorithms. Port of the simplify-js library."
homepage = "https://github.com/kade-robertson/simplify-polyline"
repository = "https://github.com/kade-robertson/simplify-polyline"
license = "MIT"
edition = "2021"
rust-version = "1.60"
keywords = ["simplify", "polyline", "geometry", "simplify-js"]
categories = ["mathematics", "graphics"]

[dependencies]
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "=1.0.107"
criterion = "=0.4.0"
regex = "=1.9.6"
memchr = "=2.6.2"
rayon-core = "=1.11.0"
os_str_bytes = "=6.5.1"

[features]
serde = ["dep:serde"]

[[test]]
name = "integration"
path = "tests/integration.rs"
required-features = ["serde"]

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false
required-features = ["serde"]